--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav>
-        <img src="images/logo.png" alt="Neil Peters Logo" class="logo" />
+        <img src="images/logo.jpg" alt="Neil Peters Logo" class="logo" />
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
