--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <img src="images/logo.jpg" alt="Neil Peters Logo" class="logo" />
         <ul>
-          <li><a href="index.html" class="active">Homee</a></li>
+          <li><a href="index.html" class="active">Homeed</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
