--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section id="hero">
         <h1>Neil Peters</h1>
         <h2>Software Engineer</h2>
-        <p>Crafting elegant solutions to complex problems</p>
+        <p>Crafting elegant solutions to complex problemsd</p>
         <a href="projects.html" class="cta-button">View My Work</a>
       </section>
 
